--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,1 +1,14 @@
 <%= render "shared/navbar" %>
+<%= @events.each do |event| %>
+  <div class="card-trip">
+    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+    <div class="card-trip-infos">
+      <div>
+        <h2><%= event.title %></h2>
+        <p><%= event.description %></p>
+      </div>
+      <h2 class="card-trip-pricing"><%= event.date %></h2>
+      <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+    </div>
+  </div>
+<% end %>
