--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,14 +1,23 @@
-<%= render "shared/navbar" %>
-<%= @events.each do |event| %>
-  <div class="card-trip">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-    <div class="card-trip-infos">
-      <div>
-        <h2><%= event.title %></h2>
-        <p><%= event.description %></p>
+
+
+
+<div class="container">
+  <div class="row justify-content-evenly ms-5 me-5">
+    <% @events.each do |event| %>
+      <div class="profile col-6 mb-4 ms-4 me-4 ">
+        <a href="<%= event_path(event)%>">
+          <% if event.photo.attached? %>
+          <%= cl_image_tag event.photo.key, height: 200, width: 200, crop: :fill, class: "margin-center profile-image" %>
+          <% end %>
+          <div class="card-body">
+            <h5 class="card-title text-center font-weight-bold mt-3"><%= link_to event.name, event_path(event), class: "text-deco"%></h5>
+
+            <p class="card-text text-light text-center"> <%= event.title %> </p>
+            <p class="card-text text-light text-center"> <%= event.description %> </p>
+            <div class="text-center">
+            </div>
+          </div>
+        </a>
       </div>
-      <h2 class="card-trip-pricing"><%= event.date %></h2>
-      <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
-    </div>
+    <% end %>
   </div>
-<% end %>
