--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm bg-light">
   <div class="container-navbar">
     <% if user_signed_in? %>
-      <%= link_to "#" do %>
+      <%= link_to profile_path do %>
         <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "wi-size-photo ms-3 mt-2 rounded-circle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
       <% end %>
     <% else %>
@@ -10,9 +10,10 @@
       <% end %>
     <% end %>
 
-    <%= link_to "#" do %>
+    <%= link_to events_path do %>
       <%= image_tag "SoCo__2_-removebg-preview.png", class: "wi-size-logo mt-3" %>
     <% end %>
+
     <%= link_to "#" do %>
       <%= image_tag "SoCo__2_-removebg-preview.png", class: "wi-size-chat me-3 mt-1" %>
     <% end %>
