--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
   <div class="row justify-content-evenly ms-5 me-5">
     <h2 class=" mb-5">Evénements auxquels vous avez participés :</h2>
-    <% @events.each do |event| %>
-      <% if event.participant == current_user %>
+    <% @participants.each do |participant| %>
       <div class="profile col-6 mb-4 ms-4 me-4">
         <div class="card-body">
           <p class="card-text  text-center"><strong>Intitulé :</strong> <br> <%= participant.event.title %></p>
