--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,15 +1,17 @@
-<% @events.each do |event| %>
-  <div class="container">
-    <div class="card-trip mt-5">
-      <%= cl_image_tag event.photo.key, height: 200, width: 200 %>
-      <div class="card-trip-infos">
-        <div>
-          <h2><%= event.title %></h2>
-          <p><%= event.description %></p>
+<div class="container">
+  <% @events.each do |event| %>
+    <a href="<%= event_path(event)%>">
+      <div class="card-trip mt-5">
+        <%= cl_image_tag event.photo.key, height: 200, width: 200 %>
+        <div class="card-trip-infos">
+          <div>
+            <h2><%= event.title %></h2>
+            <p><%= event.description %></p>
+          </div>
+          <h2 class="card-trip-pricing"><%= event.date %></h2>
+          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
         </div>
-        <h2 class="card-trip-pricing"><%= event.date %></h2>
-        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
       </div>
-    </div>
-  </div>
-<% end %>
+    </a>
+  <% end %>
+</div>
