--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,42 +1,34 @@
 <div class="container">
-  <div>
+  <div class="text-center">
     <h2><%= @event.title %></h2>
     <h3><%= @event.date %></h3>
   </div>
-  <div>
-    <h3><%= @event.capacity %> people</h3>
+  <div class="text-center">
+    <h3><%= @event.capacity %> tickets</h3>
     <h3> <%= @event.status %> event</h3>
   </div>
-    <div class="card-trip mt-5">
-      <%= cl_image_tag @event.photo.key, height: 200, width: 200 %>
-      <div class="card-trip-infos">
-        <div>
-          <p><%= @event.description %></p>
-        </div>
-        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+  <div class="card-trip mt-5">
+    <%= cl_image_tag @event.photo.key, height: 200, width: 200 %>
+    <div class="card-trip-infos">
+      <div>
+        <p><%= @event.description %></p>
       </div>
-    </div>
-    <div>
-      <a href="https://www.tricount.com/fr/creer-des-comptes-nouveau-tricount"> Tricount</a>
+      <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
     </div>
   </div>
-    <%= link_to "S'inscrire",
-      profile_path(event),
-      data: {turbo_method: :new, turbo_confirm: "Validez"}
-    %>
-</div>
-
-
-
-
+  <div class="text-center">
+    <a href="https://www.tricount.com/fr/creer-des-comptes-nouveau-tricount"> Tricount</a>
+  </div>
+  <div class="text-center">
+    <%= link_to "S'inscrire", profile_path, data: {turbo_method: :new, turbo_confirm: "Validez"}, class: "text-center" %>
+  </div>
   <div>
     <% @event_ratings.each do |event_rating| %>
       <div>
-        <h2> <%= event_rating.user.username %></h2>
-        <h2> <%= event_rating.comment %></h2>
-        <h2> <%= event_rating.rating %> /5</h2>
+        <h2 class="text-center"> <%= event_rating.user.username %></h2>
+        <h2 class="text-center"> <%= event_rating.comment %></h2>
+        <h2 class="text-center"> <%= event_rating.rating %> / 5</h2>
       </div>
     <% end %>
   </div>
 </div>
-<!-- don't forget to add map + event rating once event date is passed + chat bubble at the top >
