--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container-navbar">
     <% if user_signed_in? %>
       <%= link_to profile_path do %>
-        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "wi-size-photo ms-3 mt-2 rounded-circle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "wi-size-photo ms-3 mt-2 rounded-circle"%>
       <% end %>
     <% else %>
       <%= link_to new_user_session_path do %>
