css modifi sur index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,17 @@
 div a{
   text-decoration: none;
 }
+
+body{
+  background-color: white;
+}
+
+.radius{
+  border-radius: 20px !important;
+}
+
+.margin{
+  margin: auto;
+  width: 80vw;
+}
+
