--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,15 +8,16 @@
 }
 
 .wi-size-logo {
-  width: 17vw;
+  width: 20vw;
 }
 
 .wi-size-photo {
-  width: 8vw;
+  width: 18vw;
+  border-color: 2px solid violet;
 }
 
 .wi-size-chat {
-  width: 10vw;
+  width: 12vw;
 }
 
 
