--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,12 @@
 <div class="container">
+
+  <div style="width: 100%; height: 600px;"
+  data-controller="map"
+  data-map-markers-value="<%= @event_marker.to_json %>"
+  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
+
+
   <div class="text-center">
     <h2><%= @event.title %></h2>
     <h3><%= @event.date %></h3>
@@ -21,7 +29,7 @@
     <%= f.text_field :event_id, value: @event.id, class: "d-none" %>
     <%= f.text_field :user_id, value: current_user.id, class: "d-none" %>
     <%= f.submit "S'inscrire" %>
-  <% end %> 
+  <% end %>
     <%# <%= link_to "S'inscrire", controller: "participants", action: "create" %>
 </div>
 
