--- a/app/views/shared/_navbarbottom.html.erb
+++ b/app/views/shared/_navbarbottom.html.erb
@@ -22,7 +22,7 @@
       <% end %>
     </div>
         <div>
-      <%= link_to events_path do %>
+      <%= link_to profile_path do %>
         <i class="fa-regular fa-user"></i>
       <% end %>
     </div>
