--- a/app/assets/stylesheets/components/_navbarbottom.scss
+++ b/app/assets/stylesheets/components/_navbarbottom.scss
@@ -16,7 +16,16 @@
   width: 80%;
   background-color: $primary-color;
   justify-content: space-evenly;
+  border-radius: 16px;
   a{
     display: block;
   }
+}
+
+.fa-solid {
+  color: white;
+}
+
+.fa-regular {
+  color: white;
 }
