--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -18,11 +18,6 @@
   margin-left: 30px;
 }
 
-.wi-size-chat {
-  width: 12vw;
-  margin-left: 30px;
-}
-
 .container-navbar {
   display: flex;
   width: 100%;
@@ -30,4 +25,22 @@
   a{
     display: block;
   }
+}
+
+.log {
+  background-color: $primary-color;
+  height: 8vh;
+  width: auto;
+  margin-top: 10px;
+  margin-left: 30px;
+  border: none;
+}
+
+.log-chat {
+  background-color: $primary-color;
+  height: 8vh;
+  width: auto;
+  margin-top: 10px;
+  margin-right: 30px;
+  border: none;
 }
