--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,38 +1,38 @@
 <div class="container">
-  <div class="card-trip radius h-25 mt-4 margin">
-    <div>
-      <div class="text-center">
-      <h2><%= @event.title %></h2>
-      <h3><%= @event.date %></h3>
-    </div>
-    <div class="text-center">
-      <h3><%= @event.capacity %> Places</h3>
-      <h3> <%= @event.status %> event</h3>
-    </div>
-    <%= cl_image_tag @event.photo.key, height: 200, width: 200 %>
-    <div class="card-trip-infos">
+  <div class="margin">
+    <div class="card-trip radius h-25 mt-4">
       <div>
-        <p class="mt-3"><%= @event.description %></p>
+        <div class="color-font text-center">
+        <h2><%= @event.title %></h2>
+        <span><%= @event.date %></span>
       </div>
-      <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
-    </div>
-    <div class="d-flex justify-content-center mb-3">
-      <%= form_with model: @participant do |f| %>
-        <%= f.text_field :event_id, value: @event.id, class: "d-none btn btn-cards" %>
-        <%= f.text_field :user_id, value: current_user.id, class: "d-none btn btn-cards" %>
-        <%= f.submit "S'inscrire", class: "btn btn-cards text-light" %>
-      <% end %>
-    </div>
-  </div>
-</div>
-
-  <div>
-    <% @event_ratings.each do |event_rating| %>
+      <div class="color-font text-center pb-2">
+        <span><%= @event.capacity %> Places</span>
+        <span> <%= @event.status %> event</span>
+      </div>
+      <%= cl_image_tag @event.photo.key, height: 200, class: "w-100 object-fit-cover" %>
+      <div class="card-trip-infos">
+        <div>
+          <p class="mt-3"><%= @event.description %></p>
+        </div>
+        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+      </div>
+      <div class="d-flex justify-content-center mb-3">
+        <%= form_with model: @participant do |f| %>
+          <%= f.text_field :event_id, value: @event.id, class: "d-none btn btn-cards" %>
+          <%# <%= f.text_field :user_id, value: current_user.id, class: "d-none btn btn-cards" %>
+          <%= f.submit "S'inscrire", class: "btn btn-cards text-light" %>
+        <% end %>
+      </div>
       <div>
-        <h2 class="text-center"> <%= event_rating.user.username %></h2>
-        <h2 class="text-center"> <%= event_rating.comment %></h2>
-        <h2 class="text-center"> <%= event_rating.rating %> / 5</h2>
+        <% @event_ratings.each do |event_rating| %>
+          <div>
+            <h2 class="text-center"> <%= event_rating.user.username %></h2>
+            <h2 class="text-center"> <%= event_rating.comment %></h2>
+            <h2 class="text-center"> <%= event_rating.rating %> / 5</h2>
+          </div>
+        <% end %>
       </div>
-    <% end %>
+    </div>
   </div>
 </div>
