--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,16 +6,14 @@
       <% end %>
     <% else %>
       <%= link_to new_user_session_path do %>
-        <button type="button" class="btn btn-primary">Log in</button>
+        <button type="button" class="rounded-circle log text-light">Log in</button>
       <% end %>
     <% end %>
-
     <%= link_to events_path do %>
       <%= image_tag "SoCo__2_-removebg-preview.png", class: "wi-size-logo mt-3" %>
     <% end %>
-
-    <%= link_to "#" do %>
-      <%= image_tag "SoCo__2_-removebg-preview.png", class: "wi-size-chat me-3 mt-1" %>
+    <%= link_to new_user_session_path do %>
+      <button type="button" class="rounded-circle log-chat text-light me-3 mt-1">Chat</button>
     <% end %>
   </div>
 </div>
