--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,22 +1,18 @@
 <div class="container">
-  <div class="row justify-content-evenly ms-5 me-5">
-    <h2 class=" mb-5">Evénements auxquels vous avez participés :</h2>
-    <% @participants.each do |participant| %>
-      <div class="profile col-6 mb-4 ms-4 me-4">
-        <div class="card-body">
-          <p class="card-text text-center primary-color"><strong>Intitulé :</strong> <br> <%= participant.event.title %></p>
-          <p class="card-text text-center primary-color"><strong>Thème :</strong> <br> <%= participant.event.theme %></p>
-          <p class="card-text text-center primary-color"><strong>Date :</strong> <br> <%= participant.event.date %> </p>
-          <p class="card-text text-center primary-color"><strong>Lieu :</strong> <br> <%= participant.event.location %> </p>
-          <p class="card-text text-center primary-color"><strong>Description :</strong> <br> <%= participant.event.description %></p>
-          <p class="card-text text-center primary-color"><strong>Statut : </strong><br> <%= participant.event.status %> </p>
-          <%= link_to "Supprimer", profile_path,
-            data: {turbo_method: :delete, turbo_confirm: "Voulez-vous supprimer votre inscription ?"}
-          %>
+  <div class="margin mb-3">
+  <h2 class="color-font">Evénements auxquels vous avez participés :</h2>
+    <div class="card-trip radius h-25 mt-5">
+      <% @participants.each do |participant| %>
+        <div class="">
+          <p class="card-trip-pricing color-font w-10 mb-3"><strong>Intitulé :</strong> <br> <%= participant.event.title %></p>
+          <p class="card-trip-pricing color-font w-10 mb-3"><strong>Thème :</strong> <br> <%= participant.event.theme %></p>
+          <p class="card-trip-pricing color-font w-10 mb-3"><strong>Date :</strong> <br> <%= participant.event.date %> </p>
+          <p class="card-trip-pricing color-font w-10 mb-3"><strong>Lieu :</strong> <br> <%= participant.event.location %> </p>
+          <p class="card-trip-pricing color-font w-10 mb-3"><strong>Statut : </strong><br> <%= participant.event.status %> </p>
         </div>
-
         <%= link_to "Supprimer", participant_path(participant), data: {turbo_method: :delete, turbo_confirm: "Etes-vous sûr ?"} %>
       <% end %>
+      </div>
     </div>
   </div>
 
