--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -25,6 +25,11 @@
         </div>
         <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
       </div>
+      <div style="width: 100%; height: 600px;"
+        data-controller="map"
+        data-map-markers-value="<%= @event_marker.to_json %>"
+        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
       <div class="d-flex justify-content-center mb-3">
         <%= form_with model: @participant do |f| %>
           <%= f.text_field :event_id, value: @event.id, class: "d-none btn btn-cards" %>
