--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -38,8 +38,8 @@
 
 .log-chat {
   background-color: $primary-color;
+  width: 18vw;
   height: 8vh;
-  width: auto;
   margin-top: 10px;
   margin-right: 30px;
   border: none;
