--- a/app/views/shared/_navbarbottom.html.erb
+++ b/app/views/shared/_navbarbottom.html.erb
@@ -1,4 +1,4 @@
-<div class="sticky-bottom d-flex justify-content-evenly">
+<div class="sticky-bottom pb-3 d-flex justify-content-evenly">
   <div class="container-navbar-bottom">
     <div>
       <%= link_to events_path do %>
