--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,11 +7,11 @@
   flex-grow: 0;
 }
 
-.wi-size-logo {
+.width-size-logo {
   width: 30vw;
 }
 
-.wi-size-photo {
+.width-size-photo {
   width: 18vw;
   border: 2px solid $primary-color;
   margin-top: 10px;
