--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,56 +1,64 @@
 <div class="container">
   <div class="margin mb-3">
-  <h2 class="color-font">Evénements auxquels vous avez participés :</h2>
-    <div class="card-trip radius h-25 mt-5">
-      <% @participants.each do |participant| %>
-        <div class="text-center">
-          <p class="card-trip-pricing color-font mb-1"><strong>Intitulé :</strong> <br> <%= participant.event.title %></p>
-          <p class="card-trip-pricing color-font mb-1"><strong>Thème :</strong> <br> <%= participant.event.theme %></p>
-          <p class="card-trip-pricing color-font mb-1"><strong>Date :</strong> <br> <%= participant.event.date %> </p>
-          <p class="card-trip-pricing color-font mb-1"><strong>Lieu :</strong> <br> <%= participant.event.location %> </p>
-          <p class="card-trip-pricing color-font mb-1"><strong>Statut : </strong><br> <%= participant.event.status %> </p>
+    <h2 class="color-font text-center">Evénements auxquels vous avez participés</h2>
+    <% @participants.each do |participant| %>
+    <div class="position-relative">
+      <%= cl_image_tag participant.event.photo.key, class: "position-absolute width-size-photo-profil rounded-circle"%>
+    </div>
+    <div class="card-trip text-center radius h-25 mt-5">
+      <h5 class="card-title title-padding color-font mb-1"><strong><%= participant.event.title %></strong></h5>
+      <div class="d-flex p-2">
+        <div class="text-center flex-fill w-50 m-auto p-1">
+          <p class="color-font mb-1"><strong>Thème</strong> <br> <%= participant.event.theme %></p>
+          <p class="color-font mb-1"><strong>Date</strong> <br> <%= participant.event.date %> </p>
         </div>
-        <div class="text-center mb-2">
-          <div class="btn btn-cards">
-            <%= link_to "Supprimer", participant_path(participant), data: {turbo_method: :delete, turbo_confirm: "Etes-vous sûr ?"} %>
-          </div>
+        <div class="text-center flex-fill w-50 m-auto p-1">
+          <p class="color-font mb-1"><strong>Lieu</strong> <br> <%= participant.event.location %> </p>
+          <p class="color-font mb-1"><strong>Statut</strong><br> <%= participant.event.status %> </p>
         </div>
-      <% end %>
+      </div>
+      <div class="text-center mb-2">
+        <div class="btn btn-cards mb-2">
+          <%= link_to "Supprimer", participant_path(participant), data: {turbo_method: :delete, turbo_confirm: "Etes-vous sûr ?"} %>
+        </div>
+      </div>
+    </div>
+    <% end %>
     </div>
   </div>
-
-  <div class="margin mb-3">
-    <h2 class="color-font">Evénements que vous avez proposés :</h2>
+  <div class="margin">
+    <h2 class="color-font text-center mt-4 mb-3">Evénements que vous avez proposés</h2>
     <% @events.each do |event| %>
-      <div class="card-trip radius h-25 mt-5">
+      <div class="card-trip radius h-25 mt-5 mb-4">
         <% if event.photo.attached? %>
         <%= cl_image_tag event.photo.key, height: 200, crop: :fill, class: "w-100 object-fit-cover" %>
         <% end %>
-        <div class="text-center">
-          <h5 class="card-title text-center font-weight-bold mb-3"><%= link_to event.title, event_path(event), class: "text-deco"%></h5>
-          <p class="card-trip-pricing color-font mb-1"><strong>Intitulé :</strong> <%= event.title %></p>
-          <p class="card-trip-pricing color-font mb-1"><strong>Thème :</strong> <%= event.theme %></p>
-          <p class="card-trip-pricing color-font mb-1"><strong>Date :</strong> <%= event.date %></p>
-          <p class="card-trip-pricing color-font mb-1"><strong>Lieu :</strong> <%= event.location %></p>
-          <p class="card-trip-pricing color-font mb-1"><strong>Description :</strong> <%= event.description %></p>
-          <p class="card-trip-pricing color-font mb-1"><strong>Capacité :</strong> <%= event.capacity %> tickets</p>
-          <p class="card-trip-pricing color-font mb-1"><strong>Statut :</strong> <%= event.status %></p>
-          <p class="card-trip-pricing color-font mb-1"><strong>Cagnotte :</strong> <%= event.tricount %></p>
-          <div class="text-center mb-2">
-            <div class="btn btn-cards">
-              <%= link_to "Supprimer", event_path(event), data: {turbo_method: :delete, turbo_confirm: "Etes-vous sûr ?"} %>
+        <div class="card-trip-infos">
+          <div>
+            <div class="text-center">
+              <h5 class="card-title color-font text-center font-weight-bold mb-3"><strong><%=event.title%></strong></h5>
+              <p class="color-font mb-1"><strong>Thème :</strong> <%= event.theme %></p>
+              <p class="color-font mb-1"><strong>Date :</strong> <%= event.date %></p>
+              <p class="color-font mb-1"><strong>Capacité :</strong> <%= event.capacity %> tickets</p>
+              <p class="color-font mb-1"><strong>Statut :</strong> <%= event.status %></p>
+              <p class="color-font mb-1"><strong>Lieu :</strong> <%= event.location %></p>
+              <p class="color-font mb-1"><strong>Description :</strong> <%= event.description %></p>
+              <p class="color-font mb-1"><strong>Cagnotte :</strong> <%= event.tricount %></p>
             </div>
-            <div class="btn btn-cards">
-              <%= link_to "Modifier", edit_event_path(event)%>
+            <div class="text-center mb-2">
+              <div class="btn btn-cards">
+                <%= link_to "Supprimer", event_path(event), data: {turbo_method: :delete, turbo_confirm: "Etes-vous sûr ?"} %>
+              </div>
+              <div class="btn btn-cards">
+                <%= link_to "Modifier", edit_event_path(event)%>
+              </div>
             </div>
           </div>
         </div>
       </div>
     <% end %>
-
-  <div class="row justify-content-evenly ms-5 me-5">
-      <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
-
   </div>
-
+  <div class="row justify-content-evenly ms-5 me-5">
+    <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
+  </div>
 </div>
