--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,10 +1,11 @@
 <div class="container">
-  <div class="margin mb-3">
+  <div class="margin">
     <div class="card-trip radius h-25 mt-5">
       <div>
         <div class="color-font text-center">
         <h2><%= @event.title %></h2>
         <span><%= @event.date %></span>
+        </div>
       </div>
       <div class="color-font text-center pb-2">
         <span><%= @event.capacity %> Places</span>
