--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container-navbar">
     <% if user_signed_in? %>
       <%= link_to profile_path do %>
-        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "wi-size-photo rounded-circle"%>
+        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "width-size-photo rounded-circle"%>
       <% end %>
     <% else %>
       <%= link_to new_user_session_path do %>
@@ -10,7 +10,7 @@
       <% end %>
     <% end %>
     <%= link_to events_path do %>
-      <%= image_tag "SoCo__2_-removebg-preview.png", class: "wi-size-logo mt-3" %>
+      <%= image_tag "SoCo__2_-removebg-preview.png", class: "width-size-logo mt-3" %>
     <% end %>
     <%= link_to new_user_session_path do %>
       <button type="button" class="rounded-circle log-chat text-light me-3 mt-1">Chat</button>
