--- a/app/views/shared/_navbarbottom.html.erb
+++ b/app/views/shared/_navbarbottom.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div>
       <%= link_to events_path do %>
-        <i class="fa-regular fa-circle-plus"></i>
+        <i class="fa-solid fa-plus"></i>
       <% end %>
     </div>
     <div>
