--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,4 +1,9 @@
 <div class="container">
+  <div class="text-center m-2">
+    <div class="btn btn-cards ">
+      <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
+    </div>
+  </div>
   <div class="margin mb-3">
     <h2 class="color-font text-center">Evénements auxquels vous avez participés</h2>
     <% @participants.each do |participant| %>
@@ -57,8 +62,5 @@
         </div>
       </div>
     <% end %>
-  </div>
-  <div class="row justify-content-evenly ms-5 me-5">
-    <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
   </div>
 </div>
