--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
       <%= image_tag "SoCo__2_-removebg-preview.png", class: "width-size-logo mt-3" %>
     <% end %>
     <%= link_to new_user_session_path do %>
-      <button type="button" class="rounded-circle log-chat text-light me-3 mt-1">Chat</button>
+      <button type="button" class="rounded-circle log-chat me-3 mt-1">Chat</button>
     <% end %>
   </div>
 </div>
