ajout du chat et photo cloudinary

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -21,7 +21,7 @@
                   <div class="btn btn-cards"><%= link_to "Partager", events_path, class: "text-light m-0 p-0" %></div>
                 </div>
               </div>
-              <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+              <%= cl_image_tag current_user.photo.key, height: 150, class: "card-trip-user avatar-bordered" %>
             </div>
           </div>
         <% end %>
