--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,8 +12,16 @@
     <%= link_to events_path do %>
       <%= image_tag "SoCo__2_-removebg-preview.png", class: "width-size-logo mt-3" %>
     <% end %>
-    <%= link_to new_user_session_path do %>
-      <button type="button" class="rounded-circle log-chat me-3 mt-1">Chat</button>
-    <% end %>
+    <% if user_signed_in? %>
+      <li class="nav-item dropdown">
+        <a class="nav-link" href="#" data-bs-toggle="dropdown"><%= current_user.photo.key %></a>
+        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+          <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+        </div>
+      </li>
+    <% else %>
+    <%# <%= link_to new_user_session_path do %>
+      <%# <button type="button" class="rounded-circle log-chat me-3 mt-1">Chat</button> %>
+    <%# <% end %>
   </div>
 </div>
