--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,17 +3,23 @@
     <div class="btn btn-cards mt-3"><%= link_to "Evènements", events_path, class: "text-light"%></div>
     <div class="btn btn-cards mt-3"><%= link_to "Map", events_path, class: "text-light" %></div>
   </div>
-
-
-    <%= form_with url: events_path, method: :get, class: "d-flex" do %>
-      <%= text_field_tag :query,
-        params[:query],
-        class: "form-control",
-        placeholder: "Find an event"
-      %>
-      <%= submit_tag "Search", class: "btn btn-primary" %>
-    <% end %>
-
+  <p>
+    <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+      search
+    </a>
+  </p>
+  <div class="collapse" id="collapseExample">
+    <div class="card card-body">
+      <%= form_with url: events_path, method: :get, class: "d-flex" do %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "Find an event"
+        %>
+        <%= submit_tag "Search", class: "btn btn-primary" %>
+      <% end %>
+    </div>
+  </div>
 
   <div>
     <% @events.each do |event| %>
