modification des seed pour la chatroom

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,6 @@
+<%= link_to event_chatroom_path(@event, @chatroom) do %>
+  <button type="button" class="rounded-circle log-chat me-3 mt-1">Chat</button>
+<% end %>
 <div class="container">
   <div class="margin">
     <div class="card-trip radius h-25 mt-5">
