--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,8 +20,6 @@
         </div>
       </li>
     <% else %>
-    <%# <%= link_to new_user_session_path do %>
-      <%# <button type="button" class="rounded-circle log-chat me-3 mt-1">Chat</button> %>
-    <%# <% end %>
+    <% end %>
   </div>
 </div>
