ajout de la chatromm

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to event_chatroom_path(@event, @chatroom) do %>
+<%= link_to event_chatroom_path(@event, @event.chatroom) do %>
   <button type="button" class="rounded-circle log-chat me-3 mt-1">Chat</button>
 <% end %>
 <div class="container">
