--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -4,7 +4,7 @@
       <% @chatroom.messages.each do |message| %>
         <div id="message-<%= message.id %>">
           <small>
-            <strong><%= message.user.nickname %></strong>
+            <strong><%= message.user.username %></strong>
             <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
           </small>
           <p><%= message.content %></p>
@@ -12,13 +12,13 @@
       <% end %>
     </div>
   </div>
-  <h1>#<%= @chatroom.name %></h1>
-  <%= simple_form_for [@chatroom, @message],
+  <h1>#<%= @chatroom.event.title %>'s chatroom</h1>
+  <%= simple_form_for [@event, @chatroom, @message],
     html: {class: "d-flex"} do |f|
   %>
     <%= f.input :content,
       label: false,
-      placeholder: "Message ##{@chatroom.name}",
+      placeholder: "Message ##{@chatroom.event.title}",
       wrapper_html: {class: "flex-grow-1"}
     %>
     <%= f.submit "Send", class: "btn btn-primary mb-3" %>
