--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,5 @@
 <%= link_to event_chatroom_path(@event, @event.chatroom) do %>
-  <button type="button" class="rounded-circle log-chat me-3 mt-1">Chat</button>
+  <i class="fa-regular fa-message logochat-color"></i>
 <% end %>
 <div class="container">
   <div class="margin">
