--- a/app/views/shared/_navbarbottom.html.erb
+++ b/app/views/shared/_navbarbottom.html.erb
@@ -5,9 +5,9 @@
         <i class="fa-solid fa-house text-light"></i>
       <% end %>
     </div>
-    
+
     <div>
-      <%= link_to events_path do %>
+      <%= link_to new_event_path do %>
         <i class="fa-solid fa-plus"></i>
       <% end %>
     </div>
