ajout des ticket et des images de couldinary pour les events

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -40,6 +40,7 @@
             <h2 class="text-center"> <%= event_rating.user.username %></h2>
             <h2 class="text-center"> <%= event_rating.comment %></h2>
             <h2 class="text-center"> <%= event_rating.rating %> / 5</h2>
+            <%= render "shared/formulaireimages"%>
           </div>
         <% end %>
       </div>
