--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -44,6 +44,15 @@
           </div>
         <% end %>
       </div>
+
+      <div>
+        <% @event.images.each do |image| %>
+          <div class="gallery" id="gallery">
+            <p>libfmougliygliuyvmiuvliy</p>
+            <%= cl_image_tag image.key, height: 150, class: "" %>
+          </div>
+        <% end %>
+      </div>
       <div style="width: 100%; height: 600px;"
         data-controller="map"
         data-map-markers-value="<%= @event_marker.to_json %>"
