--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
 @import "components/navbarbottom";
 @import "components/chatroom";
 
+@import "components/form";
+
 div a{
   text-decoration: none;
   color: $third !important;
@@ -34,40 +36,3 @@ body{
   width: 80vw;
 }
 
-.log {
-  background-color: $primary-color;
-}
-
-.form-control.is-valid{
-  border-color: $primary-color !important;
-  // background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%231EDD88' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e) !important;
-}
-
-.form-select.is-valid{
-  border-color: $primary-color !important;
-}
-
-.form-select{
-  background-color: white;
-  color: $primary-color;
-  border-radius: 10px;
-}
-
-.form-control{
-  background-color: white;
-  color: $primary-color;
-  border-radius: 10px;
-}
-
-.form-control:focus{
-  color: $secondary-color;
-  background-color: $primary-color;
-}
-
-.logochat-color{
-  color: $primary-color;
-}
-
-.wraper {
-  min-height: 95vh;
-}
