--- a/app/views/shared/_formulaireimages.html.erb
+++ b/app/views/shared/_formulaireimages.html.erb
@@ -1,4 +1,6 @@
-<%= simple_form_for(@event) do |f| %>
-  <%= f.input :images, as: :file,  input_html: { multiple: true } %>
-  <%= f.submit %>
-<% end %>
+<div class="container">
+  <%= simple_form_for(@event) do |f| %>
+    <%= f.input :images, as: :file,  input_html: { multiple: true } %>
+    <%= f.submit %>
+  <% end %>
+</div>
