--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -43,6 +43,13 @@
           </div>
         <% end %>
       </div>
+      <div>
+        <% @event.images.each do |image| %>
+          <div class="gallery" id="gallery">
+            <%= cl_image_tag images.key, height: 150, class: "content" %>
+          </div>
+        <% end %>
+      </div>
       <div style="width: 100%; height: 600px;"
         data-controller="map"
         data-map-markers-value="<%= @event_marker.to_json %>"
