modification de la navbar du haut

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
   <body>
     <%= render "shared/navbar" %>
     <%= yield %>
+    <div class="pb-5"></div>
     <%= render "shared/navbarbottom" %>
   </body>
 </html>
