--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,46 +1,42 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
-}
-
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.width-size-logo {
-  width: 30vw;
-}
-
-.width-size-photo {
-  width: 18vw;
-  border: 2px solid $primary-color;
-  margin-top: 10px;
-  margin-left: 30px;
-}
-
-.container-navbar {
+.navbar-taille{
   display: flex;
-  width: 100%;
-  justify-content: space-between;
-  a{
-    display: block;
-  }
+  justify-content: center;
+  width: 100vw;
+  height: 18vh;
 }
 
-.log {
-  background-color: $primary-color;
-  height: 8vh;
-  width: auto;
-  margin-top: 10px;
-  margin-left: 30px;
-  border: none;
+.param-img{
+  height: 7vh;
+  width: 7vh;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-left: 3vh;
+  margin-top: 3vh;
+  border: 2px solid $primary-color;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+.param-icon{
+  font-size: 7vh;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-left: 3vh;
+  margin-top: 3vh;
+  color: $primary-color !important;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
-.log-chat {
-  background-color: $primary-color;
-  width: 18vw;
-  height: 8vh;
-  margin-top: 10px;
-  margin-right: 30px;
-  border: none;
+.param-logo{
+  height: 15vh;
+  width: 15vh;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.size-disp{
+  width: 33%;
+}
+
+.position-logo{
+  display: flex;
+  justify-content: center;
 }
