--- a/app/assets/stylesheets/components/_navbarbottom.scss
+++ b/app/assets/stylesheets/components/_navbarbottom.scss
@@ -17,13 +17,12 @@
 .fa-regular {
   color: white;
 }
-
 .navigation-bottom {
   position: fixed;
   width: calc(100vw - 1rem);
   bottom: .5rem;
   left: 0;
-  // height: 5vh;
+  border: 1px solid $secondary-color;
   background-color: $primary-color;
   border-radius: 2.5vh;
   font-size: 22px
